--- a/TestApplication/app/src/main/res/menu/main.xml
+++ b/TestApplication/app/src/main/res/menu/main.xml
@@ -2,7 +2,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity" >
     <item android:id="@+id/action_settings"
-        android:title="@string/action_settings"
+        android:title="@string/shuffle"
         android:orderInCategory="100"
-        android:showAsAction="never" />
+        android:showAsAction="always" />
+    <item android:id="@+id/test_settings"
+        android:title="@string/general_settings"
+        android:orderInCategory="100"
+        android:showAsAction="always" />
 </menu>
